# ezvm

./: Doxyfile  INSTALL  Makefile.am  Makefile.in  README  TODO.txt  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
debian/: README.Debian  README.source  changelog  control  copyright
include/ezvm/: ezaddr.h  ezalu.h  ezarchive.h  ezasm.h  ezdump.h  ezfile.h  ezfunc.h  ezgc.h  ezinstruction.h  ezlog.h  ezmem.h  ezmemory.h  ezobject.h  ezsegment.h  ezstack.h  eztable.h  ezthread.h  ezval.h  ezvm.h
include/ezvm/asm/: ezasm.h  ezasm_instr.h  ezasm_proc.h
share/: Makefile.am  Makefile.in
share/ezvm/: add.ezas  add2.ezas  and.ezas  and2.ezas  beq.ezas  bge.ezas  blt.ezas  bne.ezas  div.ezas  div2.ezas  hello.ezas  hello2.ezas  lsl.ezas  lsl2.ezas  lsr.ezas  lsr2.ezas  mod.ezas  mod2.ezas  mul.ezas  mul2.ezas  neg.ezas  neg2.ezas  not.ezas  not2.ezas  or.ezas  or2.ezas  ret.ezas  scope.ezas  sub.ezas  sub2.ezas  swap.ezas  thread.ezas  xor.ezas  xor2.ezas
src/ezas/: Makefile.am  Makefile.in  eaalu.h  eaval.h  ezalu.cc  ezas.cc  ezas.in  ezas.l  ezas.y  ezio.cc  ezio.h  parse.yy  scan.ll
src/ezas/alu/: eaalu.cc  eaalu_state.cc  eaalu_state.h  eabool.cc  eabool.h  eacplx.cc  eacplx.h  eafloat.cc  eafloat.h  eaint.cc  eaint.h  eastring.cc  eastring.h
src/ezas/value/: eaval.cc  eaval_bool.cc  eaval_complex.cc  eaval_float.cc  eaval_integer.cc  eaval_string.cc  ezval_bool.cc  ezval_complex.cc  ezval_float.cc  ezval_integer.cc  ezval_string.cc
src/ezvm/: Makefile.am  Makefile.in  ezvm.cc  ezvm.in
src/libezutil/: Makefile.in
src/libezvm/: Makefile.am  Makefile.in  ezalu.cc  ezarchive.cc  ezasm.cc  ezdump.cc  ezgc.cc  ezinstruction.cc  ezinstruction.h  ezio.h  ezlog.cc  ezmemory.cc  ezsegment.cc  ezval.cc  libezvm.pc.in  stack.cc  thread.cc  vm.cc
src/libezvm/asm/: ezasm.cc  ezasm_instr.cc  ezasm_proc.cc
src/libezvm/asm/instruction/: ezinst_add.cc  ezinst_add.h  ezinst_binary_operation.cc  ezinst_binary_operation.h  ezinst_call.cc  ezinst_call.h  ezinst_cmp.cc  ezinst_cmp.h  ezinst_coerc.cc  ezinst_coerc.h  ezinst_conditional_bra.cc  ezinst_conditional_bra.h  ezinst_dup.cc  ezinst_dup.h  ezinst_get.cc  ezinst_get.h  ezinst_mv.cc  ezinst_mv.h  ezinst_set.cc  ezinst_set.h  ezinst_unary_operation.cc  ezinst_unary_operation.h
src/libezvm/intrinsic/: ezintrinsic.cc  ezintrinsic.h  ezio.cc  ezio.h
src/libezvm/linux/: ezio.cc
src/libezvm/object/: ezobj.cc  ezobj_array.cc  ezobj_condition.cc  ezobj_function.cc  ezobj_nil.cc
src/libezvm/utility/: ezfile.cc  ezlog.cc
src/libezvm/value/: ezval.cc  ezval_bool.cc  ezval_carousel.cc  ezval_complex.cc  ezval_condition.cc  ezval_float.cc  ezval_integer.cc  ezval_nil.cc  ezval_string.cc
src/share/: Makefile.in
src/share/ezvm/: and.ezas  and2.ezas  bge.ezas  blt.ezas  bne.ezas  div2.ezas  lsl.ezas  lsl2.ezas  lsr.ezas  lsr2.ezas  mod2.ezas  mul.ezas  mul2.ezas  neg.ezas  neg2.ezas  not.ezas  not2.ezas  or.ezas  or2.ezas  ret.ezas  sub.ezas  xor.ezas  xor2.ezas
test_case/: add.ezas.outref  add2.ezas.outref  and.ezas.outref  and2.ezas.outref  beq.ezas.outref  bge.ezas.outref  bne.ezas.outref  div.ezas.outref  div2.ezas.outref  lsl.ezas.outref  lsl2.ezas.outref  lsr.ezas.outref  lsr2.ezas.outref  mod.ezas.outref  mod2.ezas.outref  mul.ezas.outref  mul2.ezas.outref  neg.ezas.outref  neg2.ezas.outref  not.ezas.outref  not2.ezas.outref  or.ezas.outref  or2.ezas.outref  ret.ezas.outref  sub.ezas.outref  sub2.ezas.outref  test  thread.ezas.outref  xor.ezas.outref  xor2.ezas.outref
