exampledir=$(prefix)/share/ezvm
example_DATA=ezvm/add.ezas \
	     ezvm/add2.ezas \
	     ezvm/and.ezas \
	     ezvm/and2.ezas \
	     ezvm/bge.ezas \
	     ezvm/blt.ezas \
	     ezvm/bne.ezas \
	     ezvm/div.ezas \
	     ezvm/div2.ezas \
	     ezvm/hello.ezas \
	     ezvm/hello2.ezas \
	     ezvm/lsl.ezas \
	     ezvm/lsl2.ezas \
	     ezvm/lsr.ezas \
	     ezvm/lsr2.ezas \
	     ezvm/mod.ezas \
	     ezvm/mod2.ezas \
	     ezvm/mul.ezas \
	     ezvm/mul2.ezas \
	     ezvm/neg.ezas \
	     ezvm/neg2.ezas \
	     ezvm/not.ezas \
	     ezvm/not2.ezas \
	     ezvm/or.ezas \
	     ezvm/or2.ezas \
	     ezvm/ret.ezas \
	     ezvm/sub.ezas \
	     ezvm/sub2.ezas \
	     ezvm/swap.ezas \
	     ezvm/xor.ezas \
	     ezvm/xor2.ezas
EXTRA_DIST=${example_DATA}
